Set 'overflow: hidden' on body to avoid obnoxious rubber-band scroll

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@ body {
 	background-color: #23A08D;
 	font-family: $body-font;
 	font-size: $body-font-size;
+	overflow: hidden;
 }
 
 nav {
